# LHRS-Bot

./: README.md  cli_qa.py  lhrs_webui.py  main_bench_gen.py  main_cls.py  main_pretrain_stage1.py  main_pretrain_stage2.py  main_pretrain_stage3.py  main_vg.py  main_vqa.py  pyproject.toml
Config/: multi_modal_eval.yaml  multi_modal_stage1.yaml  multi_modal_stage2.yaml  multi_modal_stage3.yaml
DataPrepare/: README.md
Script/: eval_cls.sh  eval_vg.sh  eval_vqa.sh  train_stage1.sh  train_stage2.sh  train_stage3.sh
lhrs/: __init__.py
lhrs/CustomTrainer/: EpochBasedTrainer.py  IterBasedTrainer.py  __init__.py  trainer.py
lhrs/CustomTrainer/Data/: __init__.py  data.py  transform.py
lhrs/CustomTrainer/hook/: CleanEmbedGradHook.py  EMA_hook.py  __init__.py  checkpoint_hook.py  deepspeed_hook.py  dino_loss_warmup_hook.py  eval_hook.py  hookbase.py  knn_eval_hook.py  logger_hook.py  lr_scheduler_hook.py  moco_warmup_hook.py  optimizer_hook.py  param_flops_hook.py  plot_rec_hook.py
lhrs/CustomTrainer/utils/: __init__.py  config_parser.py  distribute.py  history_buffer.py  logger.py  metric.py  misc.py  sampler.py  train_utils.py  type_helper.py
lhrs/Dataset/: ImageFolderInstance.py  UCM.py  __init__.py  build_loader.py  build_transform.py  cap_dataset.py  conversation.py  meterml.py  millionaid_eval.py  rsvqa.py  utils.py
lhrs/models/: UniBind.py  __init__.py  base_modal.py  build.py  common_arch.py  moe_layers.py  rgb_vision_modal.py  text_modal.py
lhrs/optimizer/: __init__.py  build_optimizer.py
lhrs/utils/: __init__.py  eval_utils.py
