[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lhrs"
version = "0.1.0"
description = "MLLM for RS"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "wandb", 
    "torch==2.3.1", 
    "torchvision", 
    "transformers==4.42.4",
    "timm==0.9.12", 
    "torchmetrics==1.1.2", 
    "thop", 
    "ml-collections",
    "peft==0.12.0", 
    "gradio==3.47.1", 
    "numpy", 
    "scikit-learn==1.3.2", 
    "sentencepiece==0.1.99", 
    "tensorboard", 
    "tokenizers",
    "accelerate", 
    "albumentations", 
    "bitsandbytes", 
    "deepspeed", 
    "datasets",
    "webdataset",
    "geopandas",
    "tabulate",
    "pycocotools",
    "pycocoevalcap",
    "braceexpand",
	"black",
	"isort",
    "termcolor",
    "flash_attn==2.6.1",
]

[project.urls]
Repository = "https://github.com/NJU-LHRS/LHRS-Bot"

[tool.setuptools.packages.find]
exclude = ["Config*", "Script*", "assets*", "examples.*",]

[tool.wheel]
exclude = ["Config*", "Script*", "assets*", "examples.*",]

license = { file = "LICENSE" }

[tool.black]
line-length = 115
include = '\.pyi?$'
exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | inference/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
